# chattyBot

./: .gitignore
chat/: README.md  distance.csv  embeddings.csv  pyproject.toml
chat/chat/: app.py  distance.py  embeddings.py  semantic_search.py  simple_chat.py  tokens.py
