[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["cneill <cneill@indeed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.64.0"
dotenv = "^0.9.9"
requests = "^2.32.3"
pandas = "^2.2.3"
scipy = "^1.15.2"
tiktoken = "^0.9.0"
wikipedia-api = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
